feat: URI 객체 명 변경 URI보다는 URL이 좀 더 알맞다고 판단하여 명 수정